# surfel_cloud_rviz_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
shaders/: depth_circle.frag  flat_color_circle.frag  glsl120.program  pass_color_circle.frag  pickcolor_circle.frag  point.vert  point_cloud_surfel.material
shaders/include/: circle_impl.frag
src/: point_cloud.cpp  point_cloud.h  point_cloud_common.cpp  surfel_cloud_display.cpp  surfel_cloud_display.h
